--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,17 @@
+# Node
+backend/node_modules/
+frontend/node_modules/
 node_modules/
+
+# Env files
+backend/.env
+frontend/.env
 .env
+
+# Logs/builds
+*.log
+coverage/
+dist/
+
+
 .DS_Store
